--- a/src/view/index.html
+++ b/src/view/index.html
@@ -22,7 +22,7 @@
     <section>
       <img src="/public/images/curve.png" class="bg" alt="Background" />
       <div class="content-Box">
-        <h2>Em breve!</h2>
+        <h2>Coming soon!</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi
           temporibus culpa quam eligendi voluptatum numquam nulla in, maiores
@@ -47,7 +47,7 @@
             <span>Seconds</span>
           </div>
         </div>
-        <a href="#" onclick="toggle()">Me avise</a>
+        <a href="#" onclick="toggle()">Notify me</a>
       </div>
       <div class="img-Box">
         <img src="/public/images/w8.png" alt="Waiting" />
@@ -65,8 +65,8 @@
       </ul>
     </section>
     <div class="newsletter">
-      <h2>Fique atento</h2>
-      <p>Seja notificado</p>
+      <h2>Be alert!</h2>
+      <p>get notified</p>
       <div class="inputBox">
         <form action="">
           <input
