--- a/src/view/index.html
+++ b/src/view/index.html
@@ -73,7 +73,7 @@
             type="email"
             name=""
             required=""
-            placeholder="Digite seu email"
+            placeholder="Type your email"
           />
           <input type="submit" value="Submit" />
         </form>
