--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coming soon | Responsive</title>
-    <link rel="stylesheet" href="/public/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section>
-      <img src="/public/images/curve.png" class="bg" alt="Background" />
+      <img src="/images/curve.png" class="bg" alt="Background" />
       <div class="content-Box">
         <h2>Coming soon!</h2>
         <p>
@@ -50,17 +50,17 @@
         <a href="#" onclick="toggle()">Notify me</a>
       </div>
       <div class="img-Box">
-        <img src="/public/images/w8.png" alt="Waiting" />
+        <img src="/images/w8.png" alt="Waiting" />
       </div>
       <ul class="sci">
         <li>
-          <a href="#"><img src="/public/images/facebook.png" /></a>
+          <a href="#"><img src="/images/facebook.png" /></a>
         </li>
         <li>
-          <a href="#"><img src="/public/images/linkedin.png" /></a>
+          <a href="#"><img src="/images/linkedin.png" /></a>
         </li>
         <li>
-          <a href="#"><img src="/public/images/instagram.png" /></a>
+          <a href="#"><img src="/images/instagram.png" /></a>
         </li>
       </ul>
     </section>
@@ -80,12 +80,12 @@
       </div>
       <img
         class="close"
-        src="/public/images/close.png"
+        src="/images/close.png"
         alt="close"
         onclick="toggle()"
       />
     </div>
-    <script type="text/javascript" src="/public/scripts/time.js"></script>
-    <script type="text/javascript" src="/public/scripts/email.js"></script>
+    <script type="text/javascript" src="/scripts/time.js"></script>
+    <script type="text/javascript" src="/scripts/email.js"></script>
   </body>
 </html>
