--- a/src/view/index.html
+++ b/src/view/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coming soon | Responsive</title>
     <link rel="stylesheet" href="/css/main.css" />
-    <link rel="shortcut icon"  href="/images/jake.png" type="image/png">
+    <link rel="shortcut icon" href="/images/jake.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;700&display=swap"
       rel="stylesheet"
